// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<Card /> > BackgroundCallout story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-call-out_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          Recommended for you
        </div>
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r14:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > CancelMembership story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-sm_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <h3
          class="_text_b3eba3 _text--title-sm_b3eba3 _header__title_f66b11 _header--size-sm_f66b11"
        >
          Cancel membership?
        </h3>
        <div
          class="_text_b3eba3 _text--body-sm_b3eba3 _header__sub-title_f66b11 _header--size-sm_f66b11"
        >
          We're sad to see you go
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <p
        class="_text_b3eba3 _text--body-sm_b3eba3 py-4"
      >
        Lorem ipsum dolor sit amet consectetur. Id pretium consequat consequat aliquam arcu
      </p>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--md_0829c1 _button--size-md_0829c1 _button--variant-critical_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-md_b3eba3 _button__text_0829c1"
          >
            Confirm cancellation
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > CheckboxCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="gap-spacing-size-1 flex"
  >
    <label
      class="_card__behavior-label_f66b11"
      for=":r1a:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[384px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":r1a:"
          type="checkbox"
        />
      </div>
    </label>
    <label
      class="_card__behavior-label_f66b11"
      for=":r1b:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[384px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":r1b:"
          type="checkbox"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> > CustomTopStripe story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
    style="--card__top-stripe-bg: var(--eds-theme-color-background-utility-critical-high-emphasis);"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          Recommended for you
        </div>
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rt:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--high_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > Default story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__custom_f66b11"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > IsInteractive story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__custom_f66b11"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > RadioCards story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="gap-spacing-size-1 flex"
  >
    <label
      class="_card__behavior-label_f66b11"
      for=":r18:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[384px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":r18:"
          name="test"
          type="radio"
        />
      </div>
    </label>
    <label
      class="_card__behavior-label_f66b11"
      for=":r19:"
    >
      <div
        class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-interactive_f66b11 _card--has-behavior_f66b11 w-[384px]"
      >
        <div
          class="_card__header_f66b11 _header--size-md_f66b11"
        >
          <div
            class="_header__text_f66b11"
          >
            <div
              class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
            >
              Recommended for you
            </div>
            <h3
              class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
            >
              Question of the day
            </h3>
            <div
              class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
            >
              Get to know your colleagues
            </div>
          </div>
        </div>
        <div
          class="_card__body_f66b11"
        >
          <div
            class="fpo"
          >
            Card Body
          </div>
        </div>
        <div
          class="_card__footer_f66b11"
        >
          <div
            class="fpo"
          >
            Card Footer
          </div>
        </div>
        <div
          class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
        />
        <input
          class="_card__behavior-input_f66b11"
          id=":r19:"
          name="test"
          type="radio"
        />
      </div>
    </label>
  </div>
</div>
`;

exports[`<Card /> > TopStripe story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          Recommended for you
        </div>
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rm:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--medium_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WhileDragging story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 _card--is-dragging-true_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__custom_f66b11"
      >
        <div
          class="fpo w-full"
        >
          Card Header
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithCustomizedHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11 mb-spacing-size-2"
    >
      <div
        class="_header__custom_f66b11"
      >
        Displaying 
        <strong>
          some text
        </strong>
         with 
        <em>
          mixed formatting
        </em>
        .
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithFullHeader story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          Recommended for you
        </div>
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithFullHeaderAndIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__icon_f66b11"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="24px"
          style="--icon-size: 24px;"
          viewBox="0 0 24 24"
          width="24px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
          />
        </svg>
      </div>
      <div
        class="_header__text_f66b11"
      >
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          <span>
            Get to know your colleagues
          </span>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithHorizontalPrimaryButton story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-md_f66b11"
    >
      <div
        class="_header__text_f66b11"
      >
        <div
          class="_text_b3eba3 _text--overline-md_b3eba3 _header__eyebrow_f66b11 _header--size-md_f66b11"
        >
          Recommended for you
        </div>
        <h3
          class="_text_b3eba3 _text--headline-sm_b3eba3 _header__title_f66b11 _header--size-md_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-lg_b3eba3 _header__sub-title_f66b11 _header--size-md_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:rf:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo my-4"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="_button-group_db62b8 _button-group--horizontal_db62b8"
      >
        <button
          class="_button_0829c1 _button--layout-none_0829c1 _button--primary_0829c1 _button--lg_0829c1 _button--size-lg_0829c1 _button--variant-default_0829c1"
          type="button"
        >
          <span
            class="_text_b3eba3 _text--label-lg_b3eba3 _button__text_0829c1"
          >
            Primary
          </span>
        </button>
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;

exports[`<Card /> > WithSmallFullHeaderAndIcon story renders snapshot 1`] = `
<div
  class="p-spacing-size-4"
>
  <div
    class="_card_f66b11 _card--container-style-low_f66b11 _card--container-color-default_f66b11 w-[384px]"
  >
    <div
      class="_card__header_f66b11 _header--size-sm_f66b11"
    >
      <div
        class="_header__icon_f66b11"
      >
        <svg
          aria-hidden="true"
          class="_icon_779da8"
          fill="currentColor"
          height="16px"
          style="--icon-size: 16px;"
          viewBox="0 0 24 24"
          width="16px"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M6.023 17.2923C6.873 16.6616 7.799 16.1635 8.801 15.798C9.80283 15.4327 10.8692 15.25 12 15.25C13.1308 15.25 14.1972 15.4327 15.199 15.798C16.201 16.1635 17.127 16.6616 17.977 17.2923C18.5987 16.6089 19.0913 15.8179 19.4548 14.9192C19.8183 14.0206 20 13.0475 20 12C20 9.78333 19.2208 7.89583 17.6625 6.3375C16.1042 4.77917 14.2167 4 12 4C9.78333 4 7.89583 4.77917 6.3375 6.3375C4.77917 7.89583 4 9.78333 4 12C4 13.0475 4.18175 14.0206 4.54525 14.9192C4.90875 15.8179 5.40133 16.6089 6.023 17.2923ZM9.6905 11.8095C9.0635 11.1827 8.75 10.4128 8.75 9.5C8.75 8.58717 9.0635 7.81733 9.6905 7.1905C10.3173 6.5635 11.0872 6.25 12 6.25C12.9128 6.25 13.6827 6.5635 14.3095 7.1905C14.9365 7.81733 15.25 8.58717 15.25 9.5C15.25 10.4128 14.9365 11.1827 14.3095 11.8095C13.6827 12.4365 12.9128 12.75 12 12.75C11.0872 12.75 10.3173 12.4365 9.6905 11.8095ZM12 21.5C10.6808 21.5 9.44333 21.2519 8.2875 20.7557C7.13167 20.2596 6.12625 19.5839 5.27125 18.7288C4.41608 17.8738 3.74042 16.8683 3.24425 15.7125C2.74808 14.5567 2.5 13.3192 2.5 12C2.5 10.6808 2.74808 9.44333 3.24425 8.2875C3.74042 7.13167 4.41608 6.12625 5.27125 5.27125C6.12625 4.41608 7.13167 3.74042 8.2875 3.24425C9.44333 2.74808 10.6808 2.5 12 2.5C13.3192 2.5 14.5567 2.74808 15.7125 3.24425C16.8683 3.74042 17.8738 4.41608 18.7288 5.27125C19.5839 6.12625 20.2596 7.13167 20.7557 8.2875C21.2519 9.44333 21.5 10.6808 21.5 12C21.5 13.3192 21.2519 14.5567 20.7557 15.7125C20.2596 16.8683 19.5839 17.8738 18.7288 18.7288C17.8738 19.5839 16.8683 20.2596 15.7125 20.7557C14.5567 21.2519 13.3192 21.5 12 21.5ZM14.6105 19.5645C15.4483 19.274 16.1923 18.8679 16.8423 18.3462C16.1923 17.8436 15.458 17.4519 14.6395 17.1712C13.8208 16.8904 12.941 16.75 12 16.75C11.059 16.75 10.1776 16.8888 9.35575 17.1663C8.53392 17.4439 7.80125 17.8372 7.15775 18.3462C7.80775 18.8679 8.55167 19.274 9.3895 19.5645C10.2273 19.8548 11.0975 20 12 20C12.9025 20 13.7727 19.8548 14.6105 19.5645ZM13.248 10.748C13.5827 10.4135 13.75 9.9975 13.75 9.5C13.75 9.0025 13.5827 8.5865 13.248 8.252C12.9135 7.91733 12.4975 7.75 12 7.75C11.5025 7.75 11.0865 7.91733 10.752 8.252C10.4173 8.5865 10.25 9.0025 10.25 9.5C10.25 9.9975 10.4173 10.4135 10.752 10.748C11.0865 11.0827 11.5025 11.25 12 11.25C12.4975 11.25 12.9135 11.0827 13.248 10.748Z"
          />
        </svg>
      </div>
      <div
        class="_header__text_f66b11"
      >
        <h3
          class="_text_b3eba3 _text--title-sm_b3eba3 _header__title_f66b11 _header--size-sm_f66b11"
        >
          Question of the day
        </h3>
        <div
          class="_text_b3eba3 _text--body-sm_b3eba3 _header__sub-title_f66b11 _header--size-sm_f66b11"
        >
          Get to know your colleagues
        </div>
      </div>
      <div
        class="_header__action_f66b11"
      >
        <div
          class="_menu_33ee5b"
          data-headlessui-state=""
        >
          <button
            aria-expanded="false"
            aria-haspopup="menu"
            data-headlessui-state=""
            id="headlessui-menu-button-:r7:"
            type="button"
          >
            <svg
              class="_icon_779da8"
              fill="currentColor"
              height="32px"
              role="img"
              style="--icon-size: 32px;"
              viewBox="0 0 24 24"
              width="32px"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                show more
              </title>
              <path
                d="M6.23071 13.5C5.81821 13.5 5.46513 13.3531 5.17146 13.0592C4.87763 12.7656 4.73071 12.4125 4.73071 12C4.73071 11.5875 4.87763 11.2344 5.17146 10.9408C5.46513 10.6469 5.81821 10.5 6.23071 10.5C6.64321 10.5 6.99638 10.6469 7.29021 10.9408C7.58388 11.2344 7.73071 11.5875 7.73071 12C7.73071 12.4125 7.58388 12.7656 7.29021 13.0592C6.99638 13.3531 6.64321 13.5 6.23071 13.5ZM12 13.5C11.5875 13.5 11.2344 13.3531 10.9407 13.0592C10.6469 12.7656 10.5 12.4125 10.5 12C10.5 11.5875 10.6469 11.2344 10.9407 10.9408C11.2344 10.6469 11.5875 10.5 12 10.5C12.4125 10.5 12.7655 10.6469 13.0592 10.9408C13.353 11.2344 13.5 11.5875 13.5 12C13.5 12.4125 13.353 12.7656 13.0592 13.0592C12.7655 13.3531 12.4125 13.5 12 13.5ZM17.7692 13.5C17.3567 13.5 17.0035 13.3531 16.7097 13.0592C16.416 12.7656 16.2692 12.4125 16.2692 12C16.2692 11.5875 16.416 11.2344 16.7097 10.9408C17.0035 10.6469 17.3567 10.5 17.7692 10.5C18.1817 10.5 18.5348 10.6469 18.8285 10.9408C19.1223 11.2344 19.2692 11.5875 19.2692 12C19.2692 12.4125 19.1223 12.7656 18.8285 13.0592C18.5348 13.3531 18.1817 13.5 17.7692 13.5Z"
              />
            </svg>
          </button>
        </div>
      </div>
    </div>
    <div
      class="_card__body_f66b11"
    >
      <div
        class="fpo"
      >
        Card Body
      </div>
    </div>
    <div
      class="_card__footer_f66b11"
    >
      <div
        class="fpo"
      >
        Card Footer
      </div>
    </div>
    <div
      class="_card__top-stripe_f66b11 _top-stripe--none_f66b11"
    />
  </div>
</div>
`;
